# python-llm-iaproject

./: README.md  index.json  index.py  index_data_cv.py  pyproject.toml
data/: cv.md
llamaprompt-app/: package.json
llamaprompt-app/src/: App.js  index.js
llamaprompt-app/src/components/: AnswerDisplay.js  LoadingIndicator.js  QuestionAnswerForm.js
llamaprompt-app/src/pages/: QuestionAnswerPage.js
llamaprompt-app/src/store/: store.js
llamaprompt-app/src/store/actions/: actions.js
llamaprompt-app/src/store/reducers/: QuestionsReducer.js  index.js
llm_api/api/: urls.py  views.py
llm_api/llm_api/: asgi.py  settings.py  wsgi.py
llm_api/utils/: create_index.py
